# ds-2nd

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
notification-service/: consumer.py  main.py  models.py  pyproject.toml
order-service/: Dockerfile  main.py  models.py  publisher.py  pyproject.toml
payment-service/: consumer.py  main.py  models.py  pyproject.toml
